syntax = "proto3";
package project_budget;

service ProjectBudgets {
    rpc ExceedsBudget (ExceedsBudgetRequest) returns (ExceedsBudgetReply);
    rpc RecordSpending (RecordSpendingRequest) returns (ExceedsBudgetReply);
}

message ExceedsBudgetRequest {
    string config_name = 1;
    uint64 project_id = 2;
}

message RecordSpendingRequest {
    string config_name = 1;
    uint64 project_id = 2;
    double spent = 3;
}

message ExceedsBudgetReply {
    bool exceeds_budget = 1;
}
